@@ -26,7 +26,7 @@ check_PROGRAMS = tversion tinternals tinits tisqrt tsgn tcheck	\
      tconst_pi tcopysign tcos tcosh tcot tcoth tcsc tcsch	\
      td_div td_sub tdigamma tdim tdiv tdiv_d tdiv_ui teint teq	\
      terf texp texp10 texp2 texpm1 tfactorial tfits tfma tfmod	\
-     tfms tfprintf tfrac tgamma tget_flt tget_d tget_d_2exp	\
+     tfms tfprintf tfrac tfrexp tgamma tget_flt tget_d tget_d_2exp \
      tget_f tget_ld_2exp tget_set_d64 tget_sj tget_str tget_z	\
      tgmpop thyperbolic thypot tinp_str tj0 tj1 tjn tl2b	\
      tlgamma tli2 tlngamma tlog tlog10 tlog1p tlog2 tmin_prec	\
